# foundation-model-benchmarking-tool

./: BEDROCK.md  BEDROCK_ONLY.md  README.md  mkdocs.yml  pyproject.toml  template.yml
analytics/: analytics.py
docs/: BEDROCK_ONLY.md  benchmarking.md  byoe.md  custom_benchmark_guide.md  direct_prompting.md  external_models.md  features.md  gettingstarted.md  index.md  local_mode.md  prompt_templates.md  quickstart.md  workflow.md
fmbench/: 2_deploy_model.ipynb  3_run_inference.ipynb  globals.py  main.py  utils.py
fmbench/configs/: pricing.yml
fmbench/configs/bedrock/: config-bedrock-template.yml
fmbench/configs/byoe/: README.md  config-byo-custom-rest-predictor-template.yml
fmbench/scripts/: constants.py  custom_rest_predictor.py  litellm_predictor.py  prompt_formatter.py  prompt_optimizer.py  rest_predictor.py
